--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 DB_CONNECTION=mongodb+srv://kunal-iitj:Ktkt2015@cluster0.m8wcuwb.mongodb.net/?retryWrites=true&w=majority
+CLIENT_ID=206680807901-81bmi8ortjs7kkeq9t65mgvbovnbs9j2.apps.googleusercontent.com
+CLIENT_SECRET=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
