defined the linkedin auth strategy

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 DB_CONNECTION=mongodb+srv://kunal-iitj:Ktkt2015@cluster0.m8wcuwb.mongodb.net/?retryWrites=true&w=majority
 CLIENT_ID=206680807901-81bmi8ortjs7kkeq9t65mgvbovnbs9j2.apps.googleusercontent.com
 CLIENT_SECRET=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
+LINKEDIN_CLIENT=778tlywjkov8uc
+LINKEDIN_SECRET=6Rwmg3s4RxjmS1xA
