--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ CLIENT_ID=206680807901-81bmi8ortjs7kkeq9t65mgvbovnbs9j2.apps.googleusercontent.c
 CLIENT_SECRET=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
 LINKEDIN_CLIENT=778tlywjkov8uc
 LINKEDIN_SECRET=6Rwmg3s4RxjmS1xA
+TOKEN_SECRET=dfnmoafdoinjfodsnfknov
